--- a/style.css
+++ b/style.css
@@ -188,6 +188,14 @@ ul {
     }
 }
 
+
+@media (max-width: 768px) {
+    .hero__grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+
 @media (max-width: 576px) {
     .courses__grid {
         grid-template-columns: 1fr;
